<resources>
    <string name="app_name" translatable="false">LuaDroid</string>
    <string name="run">Run</string>
    <string name="view_result">View Result</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="gotoLine">Go to Line</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="not_found">Not Found</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search_library">Search Library</string>
    <string name="next">Next</string>
    <string name="library_hint">Input Simple Name of A Class</string>
    <string name="class_hint">Input Name of A Class Member</string>
    <string name="doc">Doc</string>
    <string name="helpordoc">Help/Doc</string>
    <string name="lua_doc">Lua Doc</string>
    <string name="return_values">Retrun Values</string>
    <string name="root_mode">Root Mode</string>
    <string name="root_mode_ok">Switched to root mode</string>
    <string name="root_mode_failed">Failed to switch to root mode</string>
    <string name="root_mode_exited">Root mode exited</string>
    <string name="Opening">Opening</string>
</resources>
