<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/run"
          android:icon="@drawable/play"
          android:showAsAction="always"
          android:title="@string/run"/>
    <item android:id="@+id/undo"
          android:icon="@drawable/undo"
          android:showAsAction="always"
          android:title="@string/undo"/>
    <item android:id="@+id/redo"
          android:icon="@drawable/redo"
          android:showAsAction="always"
          android:title="@string/redo"/>
    <item android:id="@+id/gotoLine"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/gotoLine"/>
    <item android:id="@+id/search"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/search"/>
    <item android:id="@+id/search_library"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/search_library"/>
    <item android:id="@+id/view_result"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/view_result"/>

    <item android:id="@+id/open"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/open"/>
    <item android:id="@+id/save"
          android:showAsAction="ifRoom|collapseActionView"
          android:title="@string/save"/>
    <item android:id="@+id/root_mode"
        android:checkable="true"
        android:checked="false"
        android:title="@string/root_mode"/>
    <item android:id="@+id/help"
          android:title="@string/helpordoc"/>
    <item android:id="@+id/lua_doc"
          android:title="@string/lua_doc"/>
</menu>